--- a/client/src/styles/inputFields.scss
+++ b/client/src/styles/inputFields.scss
@@ -29,6 +29,7 @@ table tr>th{
     border: none;
     font-size: 13px;
     color: $color-gray;
+    text-transform: uppercase;
 }
 table tr td{
       padding: 10px  0;
