--- a/client/src/pages/admin/dashboard/dashboard.scss
+++ b/client/src/pages/admin/dashboard/dashboard.scss
@@ -11,7 +11,7 @@
 }
 
 table {
-    width: 100%;
+    width: 100% !important;
     border-collapse: separate;
     border-spacing: 0 10px;
     background: white !important;
