--- a/client/src/pages/admin/companies/companies.scss
+++ b/client/src/pages/admin/companies/companies.scss
@@ -2,37 +2,45 @@
 .company{
     padding: 10px;
     border: 1px solid $border-line;
+    .create-deal-btn{
+      top: 25%;
+      left: -50%;
+      z-index: 3;
+      width: 300px;
+    }
 }
 
 table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0 10px;
-    background: white !important;
-  }
-  
- 
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 10px;
+  background: white !important;
+}
+
+
 
 table tr>th{
-    border: none;
+  border: none;
 }
 table tr td{
-      padding: 10px  0;
-    background-color: #fff;
-    border-bottom: 2px solid $dark-orange;
-    border-top: 2px solid $dark-orange;
-  }
-  
-  table tr>:first-child {
-    background-color: #fff; 
-    border: 2px solid $dark-orange; 
-    border-radius:50% 0 0 50%;
-    border-right: 0;
-  }
-  
-  table tr>:last-child{
-    border-radius:0 50% 50% 0;
-    border: 2px solid $dark-orange;
-    border-left: 0;
-  }
+    padding: 10px;
+    width: 11.11%;
+  background-color: #fff;
+  border-bottom: 2px solid $dark-orange;
+  border-top: 2px solid $dark-orange;
+}
+
+table tr>:first-child {
+  background-color: #fff; 
+  border: 2px solid $dark-orange; 
+  border-radius:50% 0 0 50%;
+  border-right: 0;
+}
+
+table tr>:last-child{
+  border-radius:0 50% 50% 0;
+  border: 2px solid $dark-orange;
+  border-left: 0;
+}
+
  
