--- a/client/src/pages/customer/portfolio/portfolio.scss
+++ b/client/src/pages/customer/portfolio/portfolio.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/variable";
+.p-investment-table{
 
 table {
   width: 100%;
@@ -22,6 +23,7 @@ table tr td{
 
 table tr>:first-child {
   background-color: #fff; 
+  width: 10%;
   border: 2px solid $dark-orange; 
   border-radius:50% 0 0 50%;
   border-right: 0;
@@ -30,10 +32,11 @@ table tr>:first-child {
 table tr>:last-child{
   border-radius:0 50% 50% 0;
   border: 2px solid $dark-orange;
+  width: 10%;
   border-left: 0;
 }
 
-
+}
   .p-txt{
     font-family:  'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
