--- a/client/src/styles/_variable.scss
+++ b/client/src/styles/_variable.scss
@@ -16,9 +16,9 @@ $popin:"Poppins", sans-serif;
 
 @font-face {
     font-family: graphit;
-    src: url(../../public/asset/graphit-regular.woff);
+    src: url(../../asset/graphit-regular.woff);
 }
 @font-face {
     font-family: melody;
-    src: url(../../public/asset/BLMelody-Light.woff2);
+    src: url(../../asset/BLMelody-Light.woff2);
 }
