--- a/client/src/components/admin/companies/createDealPop/pop.scss
+++ b/client/src/components/admin/companies/createDealPop/pop.scss
@@ -5,6 +5,7 @@
     width: 100vw;
     position: fixed;
     inset: 0;;
+    z-index: 999;
     display: flex;
     justify-content: center;
     align-items: center;
