--- a/client/src/pages/admin/members/createMamber/createMamber.scss
+++ b/client/src/pages/admin/members/createMamber/createMamber.scss
@@ -3,40 +3,47 @@
 .create-mamber{
     padding: 20px;
     border: 1px solid $border-line;
+    
+
+
 
 }
 
+.investment-table{
 
-table {
-  width: 100%;
-  border-collapse: separate;
-  border-spacing: 0 10px;
-  background: white !important;
+  table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 10px;
+    background: white !important;
+  }
+  
+  
+  
+  table tr>th{
+    border: none;
+  }
+  table tr td{
+      padding: 10px;
+      width: 11.11%;
+    background-color: #fff;
+    border-bottom: 2px solid $dark-orange;
+    border-top: 2px solid $dark-orange;
+  }
+  
+  table tr>:first-child {
+    background-color: #fff; 
+    border: 2px solid $dark-orange; 
+    width: 10%;
+    border-radius:50% 0 0 50%;
+    border-right: 0;
+  }
+  
+  table tr>:last-child{
+    border-radius:0 50% 50% 0;
+    border: 2px solid $dark-orange;
+    width: 10%;
+    border-left: 0;
+  }
+  
 }
-
-
-
-table tr>th{
-  border: none;
-}
-table tr td{
-    padding: 10px;
-    width: 11.11%;
-  background-color: #fff;
-  border-bottom: 2px solid $dark-orange;
-  border-top: 2px solid $dark-orange;
-}
-
-table tr>:first-child {
-  background-color: #fff; 
-  border: 2px solid $dark-orange; 
-  border-radius:50% 0 0 50%;
-  border-right: 0;
-}
-
-table tr>:last-child{
-  border-radius:0 50% 50% 0;
-  border: 2px solid $dark-orange;
-  border-left: 0;
-}
-
