--- a/client/src/styles/_variable.scss
+++ b/client/src/styles/_variable.scss
@@ -12,6 +12,8 @@ $green:#06f388;
 $yellowpink:#ffcb82;
 $robot: "Roboto", sans-serif;
 $popin:"Poppins", sans-serif;
+$heading:graphit;
+$para:melody;
 
 
 @font-face {
