--- a/client/src/pages/admin/companies/companies.scss
+++ b/client/src/pages/admin/companies/companies.scss
@@ -8,7 +8,7 @@
     top: 25%;
     left: -50%;
     z-index: 3;
-    width: 300px;
+    // width: 300px;
   }
 
   table {
@@ -26,7 +26,7 @@
 
   table tr td {
     padding: 10px;
-    width: 10%;
+    width: 24%;
     background-color: #fff;
     border-bottom: 2px solid $dark-orange;
     border-top: 2px solid $dark-orange;
@@ -36,13 +36,13 @@
     background-color: #fff;
     border: 2px solid $dark-orange;
     border-radius: 50% 0 0 50%;
-    width: 6%;
+    width: 9%;
     border-right: 0;
   }
 
   table tr>:last-child {
     border-radius: 0 50% 50% 0;
-    width: 6%;
+    width: 9%;
     border: 2px solid $dark-orange;
     border-left: 0;
   }
