--- a/client/src/styles/inputFields.scss
+++ b/client/src/styles/inputFields.scss
@@ -14,36 +14,14 @@
 
 }
 
-
-// table {
-//   width: 100%;
-//   border-collapse: separate;
-//   border-spacing: 0 10px;
-//   background: white !important;
-// }
-
-
-
-// table tr>th{
-//   border: none;
-// }
-// table tr td{
-//     padding: 10px;
-//     // width: 11.11%;
-//   background-color: #fff;
-//   border-bottom: 2px solid $dark-orange;
-//   border-top: 2px solid $dark-orange;
-// }
-
-// table tr>:first-child {
-//   background-color: #fff; 
-//   border: 2px solid $dark-orange; 
-//   border-radius:50% 0 0 50%;
-//   border-right: 0;
-// }
-
-// table tr>:last-child{
-//   border-radius:0 50% 50% 0;
-//   border: 2px solid $dark-orange;
-//   border-left: 0;
-// }
+ table tr>th {
+   font-family: $heading;
+   font-weight: 400;
+   color: $color-gray;
+   text-transform: uppercase !important;
+  }
+ table tr>td {
+   font-family: $para;
+   font-weight: 700;
+   color: $dark-color;
+  }
