lots of changes

--- a/client/src/components/customer/dealPop/dealPop.scss
+++ b/client/src/components/customer/dealPop/dealPop.scss
@@ -24,6 +24,9 @@
             }
         }
         
+        table tr th{
+            width: 12%;
+        }
         table tr td{
             width: 12%;
         }
