--- a/client/src/pages/customer/portfolio/portfolio.scss
+++ b/client/src/pages/customer/portfolio/portfolio.scss
@@ -41,3 +41,8 @@ table tr>:last-child{
   .p-txt{
     font-family:  'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
+  .overview{
+    .box{
+      height: 110px;
+    }
+  }
